fix(pk-portfolio): modified ~/pages/_hero, corrected hero layout issue to make hero height uniform.

--- a/apps/pk-portfolio/src/scss/components/_hero.scss
+++ b/apps/pk-portfolio/src/scss/components/_hero.scss
@@ -2,15 +2,20 @@
 
 .component-hero__container {
   display: flex;
-  min-height: 200px;
+  min-height: 225px;
   width: 100%;
   height: auto;
-  align-items: end;
+  align-items: center;
 
   & > section {
-    margin: 2rem 4rem;
+    margin: 0 4rem;
     width: 50%;
     color: variables.$color-foreground-white;
+
+    h1 {
+      margin-top: 0;
+      font-size: 32px;
+    }
 
     a {
       display: flex;
@@ -23,6 +28,4 @@
 
     @media (width <= variables.$breakpoint-medium) { width: 100%; }
   }
-
-  & > section >  h1 { font-size: 32px; }
 }
